added section element

--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
 </head>
 
 <body>
-    <section>
+
         <header>header</header>
         
+   
 
-
-    </section>
     <nav>nav</nav>
+
+
+    <section>section</section>
     
 </body>
 
