added article and modified

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
     <meta charset="UTF-8">
@@ -12,17 +13,18 @@
 
 <body>
 
-        <header>header</header>
-        
-   
+    <header>header</header>
+
+
 
     <nav>nav</nav>
 
 
     <section>section</section>
+    <article>article</article>
     <aside>aside</aside>
     <footer>footer</footer>
-    
+
 </body>
 
 </html>
