added h1 element inside article

--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
 
 
     <section>section</section>
-    <article>article</article>
+    <article>article
+
+        <h1>h1, h2, h3</h1>
+    </article>
+
+    <div class = "aside">
+
     <aside>aside</aside>
     <footer>footer</footer>
 
